syntax = "proto3";

package auth_service;

option go_package = "github.com/lallison21/auth_service/pkg/grpc_stubs/auth_service";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string password_confirmation = 3;
  string email = 4;
}

message RegisterResponse {
  int32 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int32 app_id = 3;
}

message LoginResponse {
  string token = 1;
}

message IsAdminRequest {
  int32 user_id = 1;
}

message IsAdminResponse {
  bool is_admin = 1;
}
