syntax = "proto3";

package auth_service;
option go_package = "github.com/lallison21/pkg/grpc_stubs/auth_service";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse) {}
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
}

message RegisterResponse {
  int32 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message IsAdminRequest {
  int32 user_id = 1;
}

message IsAdminResponse {
  bool is_admin = 1;
}
